# clef2025-checkthat

./: .gitignore  .gitmodules  CITATION.cff  LICENSE  README.md  deepseek.ipynb  error_analysis.ipynb  llama3_classsification_head.ipynb  model_pipeline)_schema_orizontal.drawio  model_pipeline_schema.drawio  monolingual.ipynb  monolingual_submission.ipynb  multilingual.ipynb  notebook  notebook.ipynb  pyproject.toml  requirements.txt  zero-shot.ipynb  zero_shot.ipynb
.github/: FUNDING.yml
erroranalysis/: error_analysis.ipynb  predictions_to_be_compared.csv
img/: model_pipeline_schema.drawio
notebooks/: error_analysis.ipynb  monolingual.ipynb  multilingual.ipynb
results/: dev_arabic_predicted.tsv  dev_arabic_sentiment_predicted.tsv  dev_bulgarian_predicted.tsv  dev_bulgarian_sentiment_predicted.tsv  dev_english_llama_predicted.tsv  dev_english_modern_predicted.tsv  dev_english_predicted.tsv  dev_english_sentiment_predicted.tsv  dev_german_predicted.tsv  dev_german_sentiment_predicted.tsv  dev_italian_predicted.tsv  dev_italian_sentiment_predicted.tsv  dev_multilingual_predicted.tsv  dev_multilingual_sentiment_predicted.tsv  global_sentiment.tsv  test_arabic_predicted.tsv  test_arabic_sentiment_predicted.tsv  test_bulgarian_predicted.tsv  test_bulgarian_sentiment_predicted.tsv  test_english_llama_predicted.tsv  test_english_modern_predicted.tsv  test_english_predicted.tsv  test_english_sentiment_predicted.tsv  test_german_predicted.tsv  test_german_sentiment_predicted.tsv  test_italian_predicted.tsv  test_italian_sentiment_predicted.tsv  (+2 more)
src/: constants.py  main.py  (+4 more)
